@@ -86,12 +86,7 @@ class PublicProperties extends AbstractObjectAnalysis implements CallbackConstIn
             $publicProps[$refProp->name] = true;
         }
 
-        // For every not-declared property, we add a another reflection.
-        // Those are simply added during runtime
-        foreach (array_keys(array_diff_key(get_object_vars($data), $publicProps)) as $key) {
-            $refProps[] = new UndeclaredProperty($ref, $key);
-        }
-
+        $this->handleUndeclaredProperties($refProps, $data, $publicProps, $ref);
         if (empty($refProps) === true) {
             return $output;
         }
@@ -102,5 +97,35 @@ class PublicProperties extends AbstractObjectAnalysis implements CallbackConstIn
         return $output .
             $this->getReflectionPropertiesData($refProps, $ref) .
             $this->pool->render->renderSingeChildHr();
+    }
+
+    /**
+     * Handle the dynamic (undeclared) properties.
+     *
+     * Also: Take care of the \DateTime properties anomaly.
+     *
+     * @param array $refProps
+     * @param $data
+     * @param array $publicProps
+     * @param \ReflectionClass $ref
+     */
+    protected function handleUndeclaredProperties(array &$refProps, $data, array $publicProps, \ReflectionClass $ref)
+    {
+        // There is an anomaly with a \DateTime instance.
+        // The "public" properties date, timezone and timezone_type may be in
+        // there as undeclared properties.
+        // Since PHP 7.4, those are not available via get_object_vars(), so we
+        // have to take care of them manually.
+        if ($data instanceof \DateTime === true) {
+            $refProps['date'] = (new UndeclaredProperty($ref, 'date'))->setIsPublic(false);
+            $refProps['timezone'] = (new UndeclaredProperty($ref, 'timezone'))->setIsPublic(false);
+            $refProps['timezone_type'] = (new UndeclaredProperty($ref, 'timezone_type'))->setIsPublic(false);
+        }
+
+        // For every not-declared property, we add a another reflection.
+        // Those are simply added during runtime
+        foreach (array_keys(array_diff_key(get_object_vars($data), $publicProps)) as $key) {
+            $refProps[$key] = new UndeclaredProperty($ref, $key);
+        }
     }
 }
