@@ -1,6 +1,7 @@
 4.1.1
-- Bugfix: Predefined objects do not get their propertys
+- Bugfix: Predefined objects do not get their properties
   analysed.
+- Bugfix: Display the DateTime anomaly "public" properties.
 
 4.1.0
 - Added a log model to use for a logger implementation.
